--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a{
 	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-ul{
+.main-nav ul{
 	margin: 0 auto;
 	font-size: 0;
 	list-style-type: none;
@@ -653,6 +653,7 @@ footer{
 
 .copyright span{
 	display: inline-block;
+	vertical-align: middle;
   margin-right: 7px;
 	font-size: 14px;
 	margin-right: 9px;
@@ -686,9 +687,6 @@ footer{
 
 form .filter{
 	padding: 0 6%;
-}
-
-form{
 	display: block;
 	margin-top: 0;
 }
@@ -793,7 +791,7 @@ input[type="checkbox"]:checked:disabled  + label::after{
 .price-controls label{
   display: inline-block;
   font-size: 14px;
-  line-height: 32px;
+  line-height: 34px;
   vertical-align: top;
   cursor: pointer;
 	padding-right: 14px;
@@ -810,6 +808,7 @@ input[type="checkbox"]:checked:disabled  + label::after{
   margin: 0;
   color: inherit;
   font: inherit;
+	line-height: 34px;
   background: none;
   border: none;
 	cursor: pointer;
@@ -895,7 +894,6 @@ input[type="checkbox"]:checked:disabled  + label::after{
 	font-size: 12px;
 	line-height: normal;
   color: black;
-	vertical-align: middle;
 	text-align: left;
 	list-style-type: none;
 	text-decoration: none;
@@ -905,7 +903,6 @@ input[type="checkbox"]:checked:disabled  + label::after{
 }
 
 .sort-buy{
-	display: inline-block;
 	font-size: 12px;
 	line-height: normal;
 	text-align: left;
@@ -1060,6 +1057,7 @@ input[type="checkbox"]:checked:disabled  + label::after{
 
 .hotel-rating-count{
   display: inline-block;
+	vertical-align: middle;
   width: 110px;
   height: 27px;
   background-color: #F2F2F2;
