--- a/css/style.css
+++ b/css/style.css
@@ -339,16 +339,14 @@ footer{
 	100%{transform: translateY(0);}
 }
 
-.hotel-search-animation{
+.hotel-show{
+	display: block;
 	animation-name: bounce;
 	animation-duration: 0.6s;
 }
 
-.hotel-search-closed{
-  display: none;
-}
-
 .hotel-search{
+	display: none;
   position: absolute;
   width: 460px;
   padding: 55px;
@@ -808,10 +806,10 @@ input[type="checkbox"]:checked:disabled  + label::after{
   margin: 0;
   color: inherit;
   font: inherit;
-	line-height: 34px;
   background: none;
   border: none;
 	cursor: pointer;
+	line-height: 1.2;
 }
 
 .range-controls{
