--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@ h2{
 }
 
 .offer-search a{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	float: left;
 	width: 100%;
 	height: 76px;
@@ -62,7 +63,8 @@ a{
 	width: 1200px;
 	margin: 0 auto;
 	background-color: #fff;
-	box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+	        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .main-nav ul{
@@ -127,7 +129,8 @@ a{
 	position: absolute;
 	top: 0;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	        transform: translateX(-50%);
 	z-index: 2;
 }
 
@@ -179,7 +182,8 @@ a{
 }
 
 .benefits-text{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	float: left;
 	width: 33.3334%;
 	color: white;
@@ -243,7 +247,8 @@ a{
 }
 
 .feautures-item{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	float: left;
 	text-align: center;
 	width: 33.3334%;
@@ -263,7 +268,8 @@ a{
 }
 
 .benefits-second-text{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	float: right;
 	width: 33.3334%;
 	color: white;
@@ -298,7 +304,8 @@ a{
 }
 
 .benefits-item{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	float: left;
 	text-align: center;
 	width: 33.3334%;
@@ -334,15 +341,14 @@ footer{
 	overflow: hidden;
 }
 
-@keyframes bounce{
-  0%{transform: translateY(-395px);}
-	100%{transform: translateY(0);}
+@-webkit-keyframes bounce{
+  0%{-webkit-transform: translateY(-395px);transform: translateY(-395px);}
+	100%{-webkit-transform: translateY(0);transform: translateY(0);}
 }
 
-.hotel-show{
-	display: block;
-	animation-name: bounce;
-	animation-duration: 0.6s;
+@keyframes bounce{
+  0%{-webkit-transform: translateY(-395px);transform: translateY(-395px);}
+	100%{-webkit-transform: translateY(0);transform: translateY(0);}
 }
 
 .hotel-search{
@@ -354,13 +360,28 @@ footer{
   right: 0;
   margin: auto;
   background-color: #ffffff;
-  box-shadow: 0px 11px 35px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 11px 35px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 11px 35px 0px rgba(0, 0, 0, 0.2);
+}
+
+.hotel-show{
+	display: block;
+	-webkit-animation-name: bounce;
+	        animation-name: bounce;
+	-webkit-animation-duration: 0.6s;
+	        animation-duration: 0.6s;
 }
 
 .hotel-search-row{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
   width: 460px;
 }
 
@@ -557,7 +578,8 @@ footer{
   bottom: 0;
 	left: 0;
 	width: 100%;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	background-color: rgba(255, 255, 255, 0.9);
   padding-top: 29px;
   padding-bottom: 31px;
@@ -571,7 +593,8 @@ footer{
 .hashtag{
 	display: inline-block;
 	vertical-align: middle;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	font-size: 21px;
 	text-align: left;
 	width: 33.334%;
@@ -783,7 +806,8 @@ input[type="checkbox"]:checked:disabled  + label::after{
   width: 2px;
   height: 22px;
   background: #ffffff;
-	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
 }
 
 .price-controls label{
@@ -836,7 +860,8 @@ input[type="checkbox"]:checked:disabled  + label::after{
   background: #ababab;
   border: 8px solid #ffffff;
 	border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+          box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
   cursor: pointer;
 }
 
@@ -1062,7 +1087,8 @@ input[type="checkbox"]:checked:disabled  + label::after{
   color: #666666;
   text-align: center;
   padding-top: 3px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 	margin-top: 40px;
 }
 
